uti-0.0.1-SNAPSHOT/src/main/java/com/olol/utils/jj/SasParser.java
/* Generated By:JavaCC: Do not edit this line. SasParser.java */
package com.olol.utils.jj;

import java.util.ArrayList;
import java.util.List;
import java.io.File;
import java.io.IOException;
import java.io.InputStream;

import org.springframework.core.io.ClassPathResource;

public class SasParser implements SasParserConstants {
  public static int count = 0;
  public static List<String> variables = new ArrayList<String>();

  static class IfStatement
  {
    String varName;
    String woeName;
    String statement;
  }

  public static String charTrim(String str)
  {
    return str.substring(1, str.length() - 1);
  }

  public static void parseSas(String path)
  {
    InputStream input;
    try
    {
      File sasFile = new ClassPathResource(path).getFile();
      input = new java.io.FileInputStream(sasFile);
    }
    catch (IOException e)
    {
      System.out.println("File not found.");
      return;
    }

    try
    {
      SasParser parser = new SasParser(input);
      parser.translation_unit();
    }
    catch (ParseException e)
    {
      e.printStackTrace();
    }
  }

  public static void main(String args [])
  {
    InputStream input;
    try
    {
      File woeFile = new ClassPathResource("variables.woe").getFile();
      input = new java.io.FileInputStream(woeFile);
    }
    catch (IOException e)
    {
      System.out.println("File not found.");
      return;
    }

    try
    {
      SasParser parser = new SasParser(input);
      parser.translation_unit();
    }
    catch (ParseException e)
    {
      e.printStackTrace();
    }
  }

  static final public void translation_unit() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      external_declaration();
    }
    jj_consume_token(0);
  }

  static final public void external_declaration() throws ParseException {
  StringBuilder sb = new StringBuilder();
  String str;
  IfStatement ifstatement = new IfStatement();
    ifstatement = if_statement();
    sb.append(ifstatement.statement + "\u005cn");
    label_2:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_2;
      }
      str = elseif_statement();
       sb.append(str + "\u005cn");
    }
    str = else_statement();
       sb.append(str);
    label_3:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_3;
      }
      label_statement();
    }
    count++;
    variables.add(ifstatement.varName.toUpperCase());
    if (count ==1)
      System.out.println("if(" + ifstatement.varName.toUpperCase() + ".getName().equals(varName)){");
    else
      System.out.println("else if(" + ifstatement.varName.toUpperCase() + ".getName().equals(varName)){");
    System.out.println(sb);
    System.out.println("woeMap.put(\u005c"" + ifstatement.woeName +"\u005c", woeValue);");
    System.out.println("}");
  }

  static final public IfStatement if_statement() throws ParseException {
  Token flag = new Token();
  Token t;
  Token value;
  StringBuilder sb = new StringBuilder();
  String str ;
  IfStatement ifstatement = new IfStatement();
    jj_consume_token(IF);
    str = var_indentifier();
        sb.append("if ");
        ifstatement.varName = str;
    if (jj_2_6(2)) {
      jj_consume_token(42);
      if (jj_2_4(2)) {
        t = jj_consume_token(CHARACTER_LITERAL);
            sb.append("(value.equals(\u005c""+charTrim(t.toString()).trim()+"\u005c"))");
      } else if (jj_2_5(2)) {
        t = jj_consume_token(43);
            sb.append("(value == null)");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_7(2)) {
      str = stringvalue_desc();
      sb.append("(" + str +")");
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(THEN);
    str = var_indentifier();
    jj_consume_token(42);
    sb.append(" woeValue").append(" = ");
    ifstatement.woeName = str;
    if (jj_2_8(2)) {
      flag = jj_consume_token(MINUS);
    } else {
      ;
    }
    value = jj_consume_token(FLOATING_POINT_LITERAL);
    jj_consume_token(44);
    if (flag.toString() != null && flag.toString().trim().equals("-"))
    {
      sb.append( flag.toString() + value.toString() );
    } else
    {
          sb.append( value.toString() );
    }
    {
      sb.append(";");
      ifstatement.statement = sb.toString();
    }

        {if (true) return ifstatement;}
    throw new Error("Missing return statement in function");
  }

  static final public String elseif_statement() throws ParseException {
  StringBuilder sb = new StringBuilder();
  String str;
  Token t;
    jj_consume_token(ELSE);
    jj_consume_token(IF);
    sb.append("else if ");
    if (jj_2_11(2)) {
      str = var_indentifier();
      if (jj_2_9(2)) {
        str = digitvalue_desc();
              sb.append("(" + str +")");
      } else if (jj_2_10(2)) {
        str = stringvalue_desc();
            sb.append("(" + str +")");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_12(2)) {
      jj_consume_token(LPARENTHESIS);
      str = digitvalue_desc();
      jj_consume_token(RPARENTHESIS);
    sb.append("(" + str +")");
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(THEN);
    str = var_indentifier();
    jj_consume_token(42);
    sb.append(" woeValue = ");
    if (jj_2_13(2)) {
      jj_consume_token(MINUS);
          sb.append("-");
    } else {
      ;
    }
    t = jj_consume_token(FLOATING_POINT_LITERAL);
    sb.append(t.toString());
    jj_consume_token(44);
    sb.append(";");
  {if (true) return sb.toString();}
    throw new Error("Missing return statement in function");
  }

  static final public String else_statement() throws ParseException {
  String str;
  Token t;
  StringBuilder sb = new StringBuilder();
    jj_consume_token(ELSE);
    str = var_indentifier();
    jj_consume_token(42);
    sb.append("else woeValue = ");
    if (jj_2_14(2)) {
      jj_consume_token(MINUS);
          sb.append("-");
    } else {
      ;
    }
    if (jj_2_15(2)) {
      t = jj_consume_token(FLOATING_POINT_LITERAL);
    } else if (jj_2_16(2)) {
      t = jj_consume_token(INTEGER_LITERAL);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    sb.append(t.toString());
    jj_consume_token(44);
    sb.append(";");
  {if (true) return sb.toString();}
    throw new Error("Missing return statement in function");
  }

  static final public void label_statement() throws ParseException {
    jj_consume_token(LABEL);
    var_indentifier();
    jj_consume_token(42);
    jj_consume_token(CHARACTER_LITERAL);
    jj_consume_token(44);
  }

  static final public String var_indentifier() throws ParseException {
  Token t;
    t = jj_consume_token(IDENTIFIER);
        {if (true) return t.toString();}
    throw new Error("Missing return statement in function");
  }

  static final public String digitvalue_desc() throws ParseException {
  StringBuilder sb = new StringBuilder();
  String str;
  Token t;
    if (jj_2_28(2)) {
      jj_consume_token(42);
      jj_consume_token(43);
     sb.append(" = . ");
    } else if (jj_2_29(2)) {
      str = var_indentifier();
      jj_consume_token(GREATERTHAN);
   sb.append(" valueDouble > ");
      if (jj_2_17(2)) {
        jj_consume_token(MINUS);
         sb.append("-");
      } else {
        ;
      }
      if (jj_2_18(2)) {
        t = jj_consume_token(INTEGER_LITERAL);
    sb.append(t.toString());
      } else if (jj_2_19(2)) {
        t = jj_consume_token(FLOATING_POINT_LITERAL);
    sb.append(t.toString());
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_30(2)) {
      if (jj_2_23(2)) {
        jj_consume_token(43);
          sb.append("");
      } else if (jj_2_24(2)) {
        if (jj_2_20(2)) {
          t = jj_consume_token(MINUS);
                  sb.append("-");
        } else {
          ;
        }
        if (jj_2_21(2)) {
          t = jj_consume_token(INTEGER_LITERAL);
        } else if (jj_2_22(2)) {
          t = jj_consume_token(FLOATING_POINT_LITERAL);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
       sb.append(t.toString() + " < valueDouble &&");
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(LESSTHAN);
      str = var_indentifier();
      jj_consume_token(LESSTHANOREQUALTO);
       sb.append(" valueDouble <= ");
      if (jj_2_25(2)) {
        jj_consume_token(MINUS);
           sb.append("-");
      } else {
        ;
      }
      if (jj_2_26(2)) {
        t = jj_consume_token(INTEGER_LITERAL);
      sb.append(t.toString());
      } else if (jj_2_27(2)) {
        t = jj_consume_token(FLOATING_POINT_LITERAL);
      sb.append(t.toString());
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return sb.toString();}
    throw new Error("Missing return statement in function");
  }

  static final public String stringvalue_desc() throws ParseException {
  StringBuilder sb = new StringBuilder();
  Token t;
    if (jj_2_34(2)) {
      jj_consume_token(42);
      t = jj_consume_token(CHARACTER_LITERAL);
    sb.append(" (value.equals("+"\u005c"" + charTrim(t.toString()).trim() + "\u005c""+")) ");
    } else if (jj_2_35(2)) {
      jj_consume_token(IN);
      jj_consume_token(LPARENTHESIS);
    sb.append("Arrays.asList( ");
      t = jj_consume_token(CHARACTER_LITERAL);
    sb.append("\u005c"" + charTrim(t.toString()).trim() + "\u005c"");
      label_4:
      while (true) {
        if (jj_2_31(2)) {
          ;
        } else {
          break label_4;
        }
        jj_consume_token(45);
       sb.append(",");
        if (jj_2_32(2)) {
          t = jj_consume_token(CHARACTER_LITERAL);
                                 sb.append("\u005c"" + charTrim(t.toString()).trim() + "\u005c"");
        } else if (jj_2_33(2)) {
          t = jj_consume_token(STRING_LITERAL);
                                sb.append("\u005c"" + charTrim(t.toString()).trim() + "\u005c"");
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RPARENTHESIS);
           sb.append(")" + ".contains(value) ");
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
   {if (true) return sb.toString().trim();}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_3_8() {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(43)) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_scan_token(CHARACTER_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_scan_token(42)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3_5()) return true;
    }
    return false;
  }

  static private boolean jj_3R_7() {
    if (jj_scan_token(LABEL)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(IF)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3_16() {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3_15() {
    if (jj_scan_token(FLOATING_POINT_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3_14() {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  static private boolean jj_3_33() {
    if (jj_scan_token(STRING_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3_32() {
    if (jj_scan_token(CHARACTER_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3_31() {
    if (jj_scan_token(45)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_32()) {
    jj_scanpos = xsp;
    if (jj_3_33()) return true;
    }
    return false;
  }

  static private boolean jj_3_35() {
    if (jj_scan_token(IN)) return true;
    if (jj_scan_token(LPARENTHESIS)) return true;
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_7()) return true;
    return false;
  }

  static private boolean jj_3_34() {
    if (jj_scan_token(42)) return true;
    if (jj_scan_token(CHARACTER_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_34()) {
    jj_scanpos = xsp;
    if (jj_3_35()) return true;
    }
    return false;
  }

  static private boolean jj_3_13() {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_6()) return true;
    return false;
  }

  static private boolean jj_3_9() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_27() {
    if (jj_scan_token(FLOATING_POINT_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3_12() {
    if (jj_scan_token(LPARENTHESIS)) return true;
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3_26() {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3_25() {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  static private boolean jj_3R_5() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_11() {
    if (jj_3R_10()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3_10()) return true;
    }
    return false;
  }

  static private boolean jj_3_22() {
    if (jj_scan_token(FLOATING_POINT_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3_20() {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  static private boolean jj_3_21() {
    if (jj_scan_token(INTEGER_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3_24() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_20()) jj_scanpos = xsp;
    xsp = jj_scanpos;
    if (jj_3_21()) {
    jj_scanpos = xsp;
    if (jj_3_22()) return true;
    }
    return false;
  }

  static private boolean jj_3R_6() {
    if (jj_scan_token(ELSE)) return true;
    if (jj_scan_token(IF)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3_23() {
    if (jj_scan_token(43)) return true;
    return false;
  }

  static private boolean jj_3_30() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_23()) {
    jj_scanpos = xsp;
    if (jj_3_24()) return true;
    }
    if (jj_scan_token(LESSTHAN)) return true;
    return false;
  }

  static private boolean jj_3_19() {
    if (jj_scan_token(FLOATING_POINT_LITERAL)) return true;
    return false;
  }

  static private boolean jj_3_18() {
